# hydra-chugin

./: .gitmodules  1-codesign.sh  3-notarize.sh  CMakeLists.txt  Hydra.cpp  Hydra.dsp  Hydra.dsw  Hydra.vcxproj  README.md  build-pkg-mac.ck  build-pkg-win.ck  config_init.py  hydra_test.ck  makefile  makefile.linux  makefile.win32
.github/workflows/: linux-build-unit-tests.yml
examples/: basic.ck  basic_args.ck  modal_config.ck
examples/configs/: basic.yaml  modal.yaml
examples/configs/modal/: preset1.yaml  preset2.yaml
tests/: hydra_test.ck  run_test.ck
tests/configs/: bad.yaml  config.yaml
